# hyprnote

./: .coderabbit.yaml  .gitignore  .oxfmtrc.jsonc  .oxlintrc.json  .prettierignore  .prettierrc  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.linux-dev  LINUX_AUDIO.md  LINUX_SUPPORT.md  LinuxInstallNotes.md  README.md  Taskfile.yaml  WORKFLOW_REVIEW.md  bacon.toml  biome.json  build.rs  dist-workspace.toml  docker-compose.yaml  doxxer.ai.toml  doxxer.control.toml  doxxer.desktop.toml  dprint.json  eslint-plugin-hypr.mjs  eslint.config.js  go.mod  go.sum  linuxtodo.md  netlify.toml  openstatus.yaml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  rust-toolchain.toml  taplo.toml  (+3 more)
apps/ai/: Cargo.toml  Dockerfile  build.rs  fly.toml  openapi.gen.json
apps/ai/src/: auth.rs  constants.rs  env.rs  flagsmith.rs  handlers.rs  health.rs  main.rs  middleware.rs  observability.rs  openapi.rs  routes.rs  rpc.rs  server.rs
apps/ai/src/health/: endpoints.rs  error_classifier.rs  mod.rs  policy.rs  state.rs
apps/chrome-native-host/: Cargo.toml
apps/chrome-native-host/src/: main.rs
apps/core/: Cargo.toml
apps/core/src/: main.rs
apps/eval-cli/: Cargo.toml
apps/eval-cli/src/: main.rs  report.rs  submissions.rs
apps/granola/: Cargo.toml  README.md  package.json
apps/granola/scripts/: postinstall.js
apps/granola/src/: main.rs
apps/restate/: AGENTS.md  Cargo.toml  Dockerfile  README.md  fly.toml  package.json  restate.toml  tsconfig.json  wrangler.toml
apps/restate/src/: audioPipeline.ts  deepgram.ts  env.rs  env.ts  index.ts  main.rs  openrouter.ts  soniox.rs  soniox.ts  supabase.rs  supabase.ts  userRateLimiter.ts
apps/restate/src/services/: mod.rs  rate-limit.ts  rate_limit.rs  storage-cleanup.ts  storage_cleanup.rs  stt-file.ts  stt_file.rs
apps/server/: Cargo.toml
apps/server/src/: auth.rs  enhance.rs  main.rs  state.rs  transcribe.rs
apps/server/src/native/: enhance.rs
apps/server/src/web/: connect.rs
apps/stt/: Cargo.toml
apps/stt/src/: auth.rs  env.rs  main.rs
crates/aec/: Cargo.toml
crates/aec/benches/: aec_bench.rs
crates/aec/data/: README.md
crates/aec/src/: lib.rs
crates/agc/: Cargo.toml
crates/agc/src/: lib.rs
crates/am/: Cargo.toml
crates/am/src/: client.rs  error.rs  hf.rs  lib.rs  model.rs  types.rs
crates/analytics/: Cargo.toml
crates/analytics/src/: error.rs  lib.rs  posthog.rs
crates/api-calendar/: Cargo.toml
crates/api-calendar/src/: config.rs  error.rs  lib.rs  nango_http.rs  openapi.rs  state.rs
crates/api-calendar/src/routes/: calendar.rs  mod.rs
crates/api-feedback/: Cargo.toml
crates/api-feedback/src/: config.rs  lib.rs  routes.rs
crates/api-integration/: Cargo.toml
crates/api-integration/src/: config.rs  env.rs  error.rs  lib.rs  nango_http.rs  state.rs
crates/api-integration/src/routes/: calendar.rs  connect.rs  mod.rs  webhook.rs
crates/api-storage/: Cargo.toml
crates/api-storage/src/: config.rs  error.rs  lib.rs  openapi.rs  state.rs
crates/api-storage/src/routes/: mod.rs  storage.rs
crates/api-subscription/: Cargo.toml
crates/api-subscription/src/: config.rs  env.rs  error.rs  lib.rs  openapi.rs  routes.rs  state.rs  supabase.rs
crates/api-subscription/src/auth/: mod.rs  token.rs
crates/api-subscription/src/clients/: supabase.rs
crates/api-subscription/src/handlers/: mod.rs  trial.rs
crates/api-subscription/src/models/: mod.rs  profile.rs  subscription.rs
crates/api-subscription/src/routes/: billing.rs  mod.rs  rpc.rs
crates/api-subscription/src/services/: subscription.rs
crates/api-support/: Cargo.toml
crates/api-support/assets/: support_chat.md.jinja
crates/api-support/src/: config.rs  env.rs  error.rs  github.rs  lib.rs  logs.rs  mcp.rs  openapi.rs  state.rs
crates/api-support/src/mcp/: mod.rs  prompts.rs  server.rs
crates/api-support/src/routes/: feedback.rs  mod.rs
crates/audio/: Cargo.toml  build.rs
crates/audio-priority/: Cargo.toml
crates/audio-priority/src/: device.rs  error.rs  lib.rs  linux.rs  listener.rs  macos.rs  manager.rs  priority.rs  windows.rs
crates/audio-utils/: Cargo.toml
crates/audio-utils/src/: error.rs  lib.rs  resampler.rs  stream.rs  vorbis.rs
crates/audio-utils/src/resampler/: driver.rs  dynamic_new.rs  dynamic_old.rs  mod.rs  static_new.rs
crates/audio/src/: device_monitor.rs  errors.rs  lib.rs  mic.rs  norm.rs  resampler.rs  utils.rs
crates/audio/src/mic/: macos.rs  mod.rs
crates/audio/src/mixed/: macos.rs  mod.rs
crates/audio/src/speaker/: linux.rs  macos.rs  mock.rs  mod.rs  windows.rs
crates/calendar/: Cargo.toml
crates/calendar-apple/: Cargo.toml  README.md
crates/calendar-apple/src/: caldav.rs  carddav_client.rs  lib.rs  macos_native.rs  models.rs  stub.rs
crates/calendar-google/: Cargo.toml
crates/calendar-google/src/: auth.rs  beta.rs  errors.rs  lib.rs
crates/calendar-outlook/: Cargo.toml
crates/calendar-outlook/src/: errors.rs  lib.rs  models.rs
crates/calendar-outlook/src/models/: calendar.rs  event.rs  mod.rs
crates/calendar/src/: apple.rs  google.rs  lib.rs
crates/control-tauri/: Cargo.toml  build.rs  package.json  tauri.conf.json  tauri.conf.nightly.json  tauri.conf.stable.json
crates/control-tauri/src/: lib.rs  tray.rs
crates/db/: Cargo.toml
crates/db-script/: Cargo.toml
crates/db-script/src/: lib.rs
crates/db/src/: lib.rs
crates/db/src/admin/: billings_ops.rs  devices_ops.rs  integrations_ops.rs  migrations.rs  mod.rs  ops.rs  organizations_ops.rs  seed.rs  types.rs  users_migration.sql  users_ops.rs  users_types.rs
crates/db/src/user/: calendars_migration.sql  calendars_ops.rs  config_ops.rs  config_types.rs  configs_migration.sql  events_migration.sql  events_ops.rs  events_participants_migration.sql  events_types.rs  humans_ops.rs  migrations.rs  mod.rs  (+13 more)
crates/denoise/: Cargo.toml
crates/denoise/benches/: denoise_bench.rs
crates/denoise/src/: error.rs  lib.rs
crates/detect/: Cargo.toml
crates/detect/src/: display.rs  google_meet.rs  lib.rs  list.rs  locale.rs  macos.rs  sleep.rs  windows.rs  zoom.rs
(+5085 files in other folders)
