[package]
name = "ai-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ai"
path = "src/main.rs"

[dependencies]
hypr-llm-proxy = { workspace = true }
hypr-transcribe-proxy = { workspace = true }
owhisper-providers = { workspace = true }

axum = { workspace = true, features = ["ws"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tower-http = { workspace = true, features = ["trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
url = { workspace = true }

dotenvy = { workspace = true }
jsonwebtoken = { workspace = true }
sentry = { workspace = true }
