[package]
name = "hyprnote-chrome-native-host"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hyprnote-chrome-native-host"
path = "src/main.rs"

[dependencies]
dirs = { workspace = true }
hypr-chrome-native-messaging = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
