[package]
name = "eval-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for LLM evaluation runner"

[[bin]]
name = "evals"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive", "env"] }
clap_complete = "4"
comfy-table = "7"
indicatif = "0.17"
serde_json = { workspace = true }

hypr-eval = { workspace = true }
hypr-template-app = { workspace = true }
