[package]
name = "granola-cli"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/fastrepl/hyprnote"
description = "Export your Granola notes and transcripts to local files"

[[bin]]
name = "granola"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive"] }
hypr-granola = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
