[package]
name = "restate"
version = "0.1.0"
edition = "2024"

[dependencies]
restate-sdk = "0.7.0"

chrono = { workspace = true, features = ["serde"] }
dotenvy = { workspace = true }
envy = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
urlencoding = { workspace = true }
