[package]
name = "restate"
version = "0.1.0"
edition = "2024"

[dependencies]
hypr-restate-stt = { workspace = true }
restate-sdk = "0.7.0"

dotenvy = { workspace = true }
envy = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
