[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
schemars = { workspace = true, features = ["preserve_order"] }
tokio = { workspace = true }
futures = "0.3.31"
axum = { version = "0.7.4", features = ["ws"] }
tower-http = { version = "0.6.2", features = ["timeout"] }
http = "1.2.0"
reqwest = "0.12.9"
async-openai = { version = "0.26.0", default-features = false }
sqlx = { version = "0.8.2", features = [
  "postgres",
  "runtime-tokio",
  "tls-rustls",
  "macros",
] }

shuttle-axum = "0.49.0"
shuttle-runtime = "0.49.0"
shuttle-shared-db = { version = "0.49.0", features = ["postgres", "sqlx"] }
shuttle-deepgram = { path = "../../crates/shuttle-deepgram" }
shuttle-clova = { path = "../../crates/shuttle-clova" }
shuttle-posthog = { path = "../../crates/shuttle-posthog" }
shuttle-stytch = { path = "../../crates/shuttle-stytch" }

hypr-bridge = { path = "../../crates/bridge", package = "bridge" }
