[package]
name = "aec"
version = "0.1.0"
edition = "2021"

[dependencies]
hypr-onnx = { workspace = true }

anyhow = { workspace = true }
realfft = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }

[dev-dependencies]
approx = { workspace = true }
hound = { workspace = true }
