[package]
name = "aec"
version = "0.1.0"
edition = "2021"

[features]
default = ["128"]
128 = []
256 = []
512 = []

[dependencies]
hypr-onnx = { workspace = true }

realfft = { workspace = true }

serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
criterion = { workspace = true }
hound = { workspace = true }

[[bench]]
name = "aec_bench"
harness = false
