[package]
name = "agc"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
hound = { workspace = true }
hypr-data = { workspace = true }
rodio = { workspace = true }

[dependencies]
hypr-audio-utils = { workspace = true }
hypr-vad3 = { workspace = true }
hypr-vvad = { workspace = true }

dagc = "0.1.1"
