[package]
name = "analytics"
version = "0.1.0"
edition = "2024"

[dependencies]
hypr-posthog = { workspace = true }
outlit = "0.2.0"

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
specta = { workspace = true, features = ["derive", "serde_json"] }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
