[package]
name = "api-calendar"
version = "0.1.0"
edition = "2024"

[dependencies]
hypr-api-env = { workspace = true }
hypr-google-calendar = { workspace = true }
hypr-nango = { workspace = true }

chrono = { workspace = true, features = ["serde"] }

utoipa = { workspace = true }

axum = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
sentry = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
