[package]
name = "api-feedback"
version = "0.1.0"
edition = "2024"

[dependencies]
hypr-api-env = { workspace = true }

axum = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
