[package]
name = "api-support"
version = "0.1.0"
edition = "2024"

[dependencies]
hypr-api-auth = { workspace = true }
hypr-api-env = { workspace = true }
hypr-mcp = { workspace = true }
hypr-openrouter = { workspace = true }

utoipa = { workspace = true }

axum = { workspace = true }
sentry = { workspace = true }
tracing = { workspace = true }

jsonwebtoken = { workspace = true }
octocrab = "0.49"
sqlx = { workspace = true, features = ["runtime-tokio", "tls-rustls", "postgres", "json"] }

askama = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

rmcp = { workspace = true, features = ["server"] }
tokio-util = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
