[package]
name = "audio-priority"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# NOTE: cidre dependency temporarily removed due to API incompatibilities
# [target.'cfg(target_os = "macos")'.dependencies]
# cidre = { workspace = true, features = ["av"] }

[target.'cfg(target_os = "linux")'.dependencies]
libpulse-binding = "2.30.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_Media_Audio", "Win32_System_Com", "Win32_UI_Shell_PropertiesSystem", "Win32_Devices_FunctionDiscovery"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
