[package]
name = "audio-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { workspace = true }
futures-util = { workspace = true }
kalosm-sound = { workspace = true, default-features = false }
thiserror = { workspace = true }

dasp = { workspace = true }
hound = { workspace = true }
rodio = { workspace = true }
rubato = "0.16.2"
vorbis_rs = { workspace = true }

[dev-dependencies]
hypr-data = { workspace = true }
tokio = { workspace = true, features = ["full"] }
