[package]
name = "audio"
version = "0.1.0"
edition = "2021"

[features]
default = ["pulseaudio"]
pulseaudio = ["dep:libpulse-binding", "dep:libpulse-simple-binding"]

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

bytes = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

futures-channel = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }

cpal = { workspace = true }
dasp = { workspace = true }
rodio = { workspace = true }

ebur128 = "0.1.10"
kalosm-sound = { workspace = true, default-features = false }
ringbuf = { workspace = true }
tracing-subscriber = { workspace = true }

# For PulseAudio byte conversion
bytemuck = "1.14"

[target.'cfg(target_os = "macos")'.dependencies]
cidre = { workspace = true, features = ["av"] }

[target.'cfg(target_os = "windows")'.dependencies]
wasapi = "0.19.0"

[target.'cfg(target_os = "linux")'.dependencies]
alsa = "0.9.1"
libpulse-binding = { version = "2.29", optional = true }
libpulse-simple-binding = { version = "2.29", optional = true }

[dev-dependencies]
hound = { workspace = true }
hypr-data = { workspace = true }
rodio = { workspace = true }
serial_test = { workspace = true }
