[package]
name = "calendar-google"
version = "0.1.0"
edition = "2021"

[dependencies]
hypr-calendar-interface = { path = "../calendar-interface", package = "calendar-interface" }

chrono = { workspace = true }
google-calendar = "0.7.0"
google-calendar3 = "6.0.0"

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
