[package]
name = "calendar"
version = "0.1.0"
edition = "2021"

[dependencies]
hypr-calendar-apple = { workspace = true }
hypr-calendar-google = { workspace = true }
hypr-calendar-interface = { workspace = true }
hypr-calendar-outlook = { workspace = true }

thiserror = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

schemars = { workspace = true }
specta = { workspace = true, features = ["derive"] }
