[package]
name = "control-tauri"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[[bin]]
name = "control-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tauri = { workspace = true, features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
