[package]
name = "control-tauri"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[[bin]]
name = "control-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tauri = { workspace = true, features = ["macos-private-api", "tray-icon", "image-png"] }

tauri-plugin-store = { workspace = true }
tauri-plugin-updater = { workspace = true }

monitor = { git = "https://github.com/ahkohd/tauri-toolkit", branch = "v2" }
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { workspace = true }
objc2-app-kit = { workspace = true }
objc2-foundation = { workspace = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
