[package]
name = "db-script"
version = "0.1.0"
edition = "2021"

[dependencies]
libsql = { workspace = true }

hypr-db-user = { workspace = true }
hypr-listener-interface = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
hypr-data = { workspace = true }
