[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
time = { workspace = true, features = ["serde"] }

tokio = { workspace = true, features = ["rt", "macros"] }
libsql = "0.6.0"

specta = { workspace = true, features = ["derive", "time"] }
specta-typescript = { workspace = true }
specta-util = { workspace = true }
