[package]
name = "detect"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "time"] }

[target."cfg(target_os = \"macos\")".dependencies]
cidre = { workspace = true }
objc2-application-services = { workspace = true }
objc2-foundation = { workspace = true }
objc2-app-kit = { workspace = true }
objc2 = { workspace = true }
